Fix alignement in responsive menu

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -26,7 +26,7 @@ menu {
       transform: translateY(-50%);
 
       ul {
-        justify-content: left !important;
+        justify-content: flex-start !important;
       }
 
       @media screen and (max-width: 800px) {
